--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "buildncopy": "npm run build && (cp -r build ../)"
+    "copy": "xcopy /E build \"E:\\learning stuff\\MERN Wesbite\\build\"",
+    "buildncopy": "npm run build && (xcopy /E build \"E:\\learning stuff\\MERN Wesbite\\build\")"
   },
   "eslintConfig": {
     "extends": [
